[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Button.gd" type="Script" id=1]
[ext_resource path="res://Assets/industrial.v2.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "DownToUp"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 357, 356 ]
}

[sub_resource type="Animation" id=2]
resource_name = "UpToDown"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 356, 357 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 1.5 )

[node name="Button" type="Sprite"]
texture = ExtResource( 2 )
offset = Vector2( 8, 8 )
hframes = 32
vframes = 32
frame = 356
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DownToUp = SubResource( 1 )
anims/UpToDown = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 14.5 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
